--- a/MM_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MM_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -194,6 +194,12 @@ PaperRuntimeSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 TcpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings.Tether,
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings.Tether,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings.Tether,
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,
+MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,
+CableComponent=CableComponent.Rendering.TextureStreaming,CableComponent.Rendering.LOD,
+MeshComponent=MeshComponent.Rendering.TextureStreaming,MeshComponent.Rendering.LOD,MeshComponent.Collision.Collision,
+StaticMeshComponent=
+PostProcessVolume=PostProcessVolume.Lens.Lens|Image Effects,
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Blueprints
@@ -243,6 +249,9 @@ LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/JasonHiscock_BP.JasonHiscock_BP
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/MM_UI.MM_UI
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/LargeObject_BP.LargeObject_BP
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -784,19 +793,126 @@ SmallObject_BP_C.Replication=True
 SmallObject_BP_C.Input=True
 SmallObject_BP_C.Actor=True
 SmallObject_BP_C.TransformCommon=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.Thumbnail=True
+PreviewMaterial.ImportSettings=True
+MaterialExpressionScalarParameter.General=True
+MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
+MaterialExpressionScalarParameter.MaterialExpression=True
+MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
+MaterialExpressionConstant3Vector.MaterialExpression=True
+MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=True
+MaterialExpressionMaterialFunctionCall.MaterialExpression=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+MaterialExpressionMultiply.MaterialExpressionMultiply=True
+MaterialExpressionMultiply.MaterialExpression=True
+MaterialEditorInstanceConstant.ParameterGroups=True
+MaterialEditorInstanceConstant.General=True
+MaterialEditorInstanceConstant.Previewing=True
+MaterialExpressionFresnel.MaterialExpressionFresnel=True
+MaterialExpressionFresnel.MaterialExpression=True
+MaterialExpressionLinearInterpolate.MaterialExpressionLinearInterpolate=True
+MaterialExpressionLinearInterpolate.MaterialExpression=True
+MaterialExpressionSine.MaterialExpressionSine=True
+MaterialExpressionSine.MaterialExpression=True
+MaterialExpression.MaterialExpression=True
+MaterialExpressionTime.MaterialExpressionTime=True
+MaterialExpressionTime.MaterialExpression=True
+MaterialExpressionClamp.MaterialExpressionClamp=True
+MaterialExpressionClamp.MaterialExpression=True
+PointLightComponent.Variable=True
+PointLightComponent.TransformCommon=True
+PointLightComponent.Sockets=True
+PointLightComponent.Light=True
+PointLightComponent.Rendering=True
+PointLightComponent.Lightmass=True
+PointLightComponent.Performance=True
+PointLightComponent.LightFunction=True
+PointLightComponent.DistanceFieldShadows=True
+PointLightComponent.Light Profiles=True
+PointLightComponent.Tags=True
+PointLightComponent.ComponentReplication=True
+PointLightComponent.Cooking=True
+PointLightComponent.Events=True
+CableComponent.Variable=True
+CableComponent.TransformCommon=True
+CableComponent.Sockets=True
+CableComponent.Materials=True
+CableComponent.Cable=True
+CableComponent.Cable Forces=True
+CableComponent.Cable Rendering=True
+CableComponent.Collision=True
+CableComponent.Lighting=True
+CableComponent.Rendering=True
+CableComponent.Tags=True
+CableComponent.ComponentReplication=True
+CableComponent.Cooking=True
+CableComponent.Events=True
+CableComponent.HLOD=True
+CableComponent.AssetUserData=True
+K2Node_InputKey.Input=True
+K2Node_InputKey.Modifier=True
+MeshComponent.TransformCommon=True
+MeshComponent.Materials=True
+MeshComponent.Collision=True
+MeshComponent.Lighting=True
+MeshComponent.Rendering=True
+MeshComponent.Tags=True
+MeshComponent.ComponentReplication=True
+MeshComponent.Variable=True
+MeshComponent.Cooking=True
+MeshComponent.HLOD=True
+MeshComponent.Mobile=True
+MeshComponent.AssetUserData=True
+StaticMeshComponent.Mobile=True
+CableComponent.Mobile=True
+REINST_JasonHiscock_BP_C_419.Variable=True
+REINST_JasonHiscock_BP_C_419.TransformCommon=True
+REINST_JasonHiscock_BP_C_419.Sockets=True
+REINST_JasonHiscock_BP_C_419.Shape=True
+REINST_JasonHiscock_BP_C_419.Navigation=True
+REINST_JasonHiscock_BP_C_419.Rendering=True
+REINST_JasonHiscock_BP_C_419.Physics=True
+REINST_JasonHiscock_BP_C_419.Collision=True
+REINST_JasonHiscock_BP_C_419.Tags=True
+REINST_JasonHiscock_BP_C_419.ComponentReplication=True
+REINST_JasonHiscock_BP_C_419.Cooking=True
+REINST_JasonHiscock_BP_C_419.Events=True
 
 [PluginBrowser]
 InstalledPlugins=Substance
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonBP/Blueprints/SmallObject_BP
-MRUItem1=/Game/FirstPersonBP/Blueprints/LargeObject_BP
-MRUItem2=/Game/FirstPersonBP/Blueprints/MM_UI
-MRUItem3=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
-MRUItem4=/Game/FirstPerson/Character/Mesh/SK_Mannequin_Arms_PhysicsAsset
-MRUItem5=/Game/FirstPerson/Animations/FirstPerson_Idle
-MRUItem6=/Game/FirstPerson/Character/Mesh/SK_Mannequin_Arms
-MRUItem7=/Game/FirstPersonBP/Blueprints/JasonHiscock_BP
+MRUItem0=/Game/FirstPersonBP/Blueprints/LargeObject_BP
+MRUItem1=/Game/FirstPersonBP/Blueprints/MM_UI
+MRUItem2=/Game/Materials/TetherGlow_Mat
+MRUItem3=/Game/Materials/TetherBadleash_Mat
+MRUItem4=/Game/Materials/TetherGlowBadActive_Mat
+MRUItem5=/Game/Materials/TetherGlowGood_Mat_2
+MRUItem6=/Game/Materials/TetherGlowGoodActive_Mat
+MRUItem7=/Game/Materials/TetherGlowGoodLeash_Mat
+MRUItem8=/Game/Materials/TetherGlowGood_Mat_
+MRUItem9=/Game/Materials/TetherGlowGood_Mat_1
+MRUItem10=/Game/FirstPersonBP/Blueprints/JasonHiscock_BP
+MRUItem11=/Game/FirstPersonBP/Blueprints/SmallObject_BP
+MRUItem12=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
+MRUItem13=/Game/FirstPerson/Character/Mesh/SK_Mannequin_Arms_PhysicsAsset
+MRUItem14=/Game/FirstPerson/Animations/FirstPerson_Idle
+MRUItem15=/Game/FirstPerson/Character/Mesh/SK_Mannequin_Arms
 
 [PlacementMode]
 RecentlyPlaced=/Game/FirstPersonBP/Blueprints/SmallObject_BP.SmallObject_BP;/Engine/Transient.ActorFactoryBlueprint_0
@@ -807,23 +923,24 @@ RecentlyPlaced=/Game/FirstPerson/Character/Mesh/SK_Mannequin_Arms.SK_Mannequin_A
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
-Object=
-StaticMeshComponent=
-MeshComponent=
-PrimitiveComponent=
-SceneComponent=
-ActorComponent=
+Object="\"Object.Rendering.OverrideMaterials\" \"Object.Collision.BodyInstance\" "
+StaticMeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Collision.BodyInstance\" "
+MeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Collision.BodyInstance\" "
+PrimitiveComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Collision.BodyInstance\" "
+SceneComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Collision.BodyInstance\" "
+ActorComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Collision.BodyInstance\" "
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[8]\" "
 Image="\"Object.Appearance.Brush\" "
-Widget=
-Visual=
+Widget="\"Object.Appearance.Brush\" "
+Visual="\"Object.Appearance.Brush\" "
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Volume=
-Brush=
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+CableComponent="\"Object.Cable.AttachEndTo\" \"Object.Rendering.OverrideMaterials\" \"Object.Collision.BodyInstance\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPerson/Character/Mesh/SK_Mannequin_Arms_PhysicsAsset.SK_Mannequin_Arms_PhysicsAsset=1
@@ -832,6 +949,15 @@ Brush=
 /Game/FirstPersonBP/Blueprints/FirstPersonHUD.FirstPersonHUD=1
 /Game/FirstPersonBP/Blueprints/LargeObject_BP.LargeObject_BP=1
 /Game/FirstPersonBP/Blueprints/SmallObject_BP.SmallObject_BP=1
+/Game/Materials/TetherGlow_Mat.TetherGlow_Mat=1
+/Game/Materials/TetherGlowGood_Mat_.TetherGlowGood_Mat_=1
+/Game/Materials/TetherGlowGood_Mat_1.TetherGlowGood_Mat_1=1
+/Game/Materials/TetherGlowGoodLeash_Mat.TetherGlowGoodLeash_Mat=1
+/Game/Materials/TetherGlowGoodActive_Mat.TetherGlowGoodActive_Mat=1
+/Game/FirstPersonBP/Blueprints/MM_UI.MM_UI=1
+/Game/Materials/TetherBadleash_Mat.TetherBadleash_Mat=1
+/Game/Materials/TetherGlowBad_Mat.TetherGlowBad_Mat=1
+/Game/Materials/TetherGlowBadActive_Mat.TetherGlowBadActive_Mat=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="PhysicsAssetEditor",Commands=)
@@ -857,6 +983,12 @@ bCanPreviewSwapAspectRatio=False
 Theme0=New Theme
 Theme0Color0=(R=188.219208,G=0.947230,B=1.000000,A=1.000000)
 Theme0Label0=
+Theme0Color1=(R=50.408081,G=0.543589,B=1.000000,A=1.000000)
+Theme0Label1=
+Theme0Color2=(R=2.489553,G=0.959239,B=1.000000,A=1.000000)
+Theme0Label2=
+Theme0Color3=(R=359.090515,G=1.000000,B=0.098958,A=1.000000)
+Theme0Label3=
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
@@ -1528,5 +1660,63 @@ ExternalImagePicker.TimeStamp=2018.10.25-14.54.19
 ExternalImagePicker.LastCompileMethod=Unknown
 SequencerWidgets.TimeStamp=2018.10.25-14.54.28
 SequencerWidgets.LastCompileMethod=Unknown
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bUseUnsortedMenus=False
+
+[LightingBuildOptions]
+OnlyBuildSelected=False
+OnlyBuildSelectedLevels=False
+OnlyBuildVisibility=False
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=1
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
+
+[MaterialInstanceEditor]
+bShowGrid=False
+bDrawGrid=True
+PrimType=1
+
+[DetailCategoriesAdvanced]
+CableComponent.Cable=True
+MeshComponent.Rendering=True
+
+[MessageLog]
+LastLogListing=MapCheck
 
 
