Added Neural Node Assets

--- a/MM_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MM_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -104,8 +104,8 @@ SnapScaleEnabled=False
 RotGridEnabled=False
 
 [MRU]
-MRUItem0=/Game/FirstPersonBP/Maps/VerticalSlice_Level_1
-MRUItem1=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem1=/Game/FirstPersonBP/Maps/VerticalSlice_Level_1
 MRUItem2=/Game/FirstPersonBP/Maps/VerticalSlice_Level1
 
 [/Script/UnrealEd.PersonaOptions]
@@ -204,7 +204,7 @@ MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Vector P
 CableComponent=CableComponent.Rendering.TextureStreaming,CableComponent.Rendering.LOD,
 MeshComponent=MeshComponent.Rendering.TextureStreaming,MeshComponent.Rendering.LOD,MeshComponent.Collision.Collision,
 StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
-PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Rendering Features.Rendering Features,PostProcessVolume.Lens.Lens|Exposure,
+PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Rendering Features.Rendering Features,PostProcessVolume.Lens.Lens
 K2Node_VariableGet=PostProcessVolume.Lens.Lens,
 K2Node_VariableSet=PostProcessVolume.Lens.Lens,
 K2Node_MakeStruct=K2Node_MakeStruct.PinOptions.ShowPinForProperties,
@@ -231,7 +231,7 @@ ProgressMirror_BP_C=PostProcessVolume.Lens.Lens,
 IntProperty=PostProcessVolume.Lens.Lens,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Materials
+ContentBrowserTab1.SelectedPaths=/Game/Meshes
 AssetPropertyPicker.ThumbnailSizeScale=0.812500
 AssetPropertyPicker.CurrentViewType=0
 SequenceBrowser.ActiveTypeFilters=
@@ -274,11 +274,10 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/FirstPersonBP/Maps/VerticalSlice_Level_1
+LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/JasonHiscock_BP.JasonHiscock_BP
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1357,33 +1356,42 @@ GeomModifier_Extrude.Settings=True
 Actor.Surface Materials=True
 Actor.Geometry=True
 Actor.Surface Properties=True
+FbxImportUI.Mesh=True
+FbxImportUI.Transform=True
+FbxImportUI.Miscellaneous=True
+FbxImportUI.LodSettings=True
+FbxImportUI.Material=True
 
 [PluginBrowser]
 InstalledPlugins=Substance
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Materials/TetherGlow_Mat_Inst3
-MRUItem1=/Game/StarterContent/Props/SM_Rock
-MRUItem2=/Game/FirstPersonBP/Maps/VerticalSlice_Level_1
-MRUItem3=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem4=/Game/FirstPersonBP/Blueprints/JasonHiscock_BP
-MRUItem5=/Game/Materials/TetherGlow_Mat
-MRUItem6=/Game/Materials/SludgeGlow_Mat1
-MRUItem7=/Game/Materials/TetherGlow_Mat_Inst2
-MRUItem8=/Game/FirstPersonBP/Blueprints/ProgressMirror_BP
-MRUItem9=/Game/FirstPersonBP/Blueprints/LargeObject_BP
-MRUItem10=/Game/FirstPersonBP/Blueprints/MM_UI
-MRUItem11=/Game/Materials/LightBeamMaterial/LightGlow_Mat_Inst2
-MRUItem12=/Game/FirstPersonBP/Blueprints/MirrorShard_BP
-MRUItem13=/Game/FirstPersonBP/Blueprints/SmallObject_BP
-MRUItem14=/Game/Materials/CorruptedArea/DetectiveMode_Mat2
-MRUItem15=/Game/Materials/Blank_Mat
-MRUItem16=/Game/Materials/Mirror
-MRUItem17=/Game/Materials/TetherGlow_Mat_Inst
-MRUItem18=/Game/Materials/CorruptedArea/CorruptedArea_Mat_Inst1
-MRUItem19=/Game/FirstPersonBP/Blueprints/CorruptAreas/Sludge_BP
+MRUItem0=/Game/FirstPersonBP/Blueprints/MirrorPuzzle/KeyJem_BP
+MRUItem1=/Game/FirstPersonBP/Blueprints/MirrorPuzzle/PrismObject_BP
+MRUItem2=/Game/Materials/Mirror1
+MRUItem3=/Game/Materials/Blank_Mat
+MRUItem4=/Game/Meshes/Crystal_neural_node/Prism_Mesh
+MRUItem5=/Game/Meshes/Crystal_neural_node/crystal_neural_node1
+MRUItem6=/Game/Meshes/Crystal_neural_node/crystal_neural_node2
+MRUItem7=/Game/Materials/TetherGlow_Mat_Inst3
+MRUItem8=/Game/StarterContent/Props/SM_Rock
+MRUItem9=/Game/FirstPersonBP/Maps/VerticalSlice_Level_1
+MRUItem10=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem11=/Game/FirstPersonBP/Blueprints/JasonHiscock_BP
+MRUItem12=/Game/Materials/TetherGlow_Mat
+MRUItem13=/Game/Materials/SludgeGlow_Mat1
+MRUItem14=/Game/Materials/TetherGlow_Mat_Inst2
+MRUItem15=/Game/FirstPersonBP/Blueprints/ProgressMirror_BP
+MRUItem16=/Game/FirstPersonBP/Blueprints/LargeObject_BP
+MRUItem17=/Game/FirstPersonBP/Blueprints/MM_UI
+MRUItem18=/Game/Materials/LightBeamMaterial/LightGlow_Mat_Inst2
+MRUItem19=/Game/FirstPersonBP/Blueprints/MirrorShard_BP
 
 [PlacementMode]
+RecentlyPlaced=/Game/Materials/Mirror1.Mirror1;
+RecentlyPlaced=/Game/Materials/Mirror.Mirror;
+RecentlyPlaced=/Game/Meshes/Crystal_neural_node/crystal_neural_node1.crystal_neural_node1;
+RecentlyPlaced=/Game/Meshes/Crystal_neural_node/crystal_neural_node2.crystal_neural_node2;
 RecentlyPlaced=/Game/Materials/TetherGlow_Mat_Inst3.TetherGlow_Mat_Inst3;
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/FirstPersonBP/Blueprints/CorruptAreas/Sludge_BP.Sludge_BP;
@@ -1400,20 +1408,16 @@ RecentlyPlaced=/Game/FirstPersonBP/Blueprints/MirrorPuzzle/LightBeam_BP.LightBea
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/FirstPersonBP/Blueprints/MirrorShard_BP.MirrorShard_BP;
 RecentlyPlaced=/Game/FirstPersonBP/Blueprints/ProgressMirror_BP.ProgressMirror_BP;/Engine/Transient.ActorFactoryBlueprint_0
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Script/Engine.Character;/Engine/Transient.ActorFactoryCharacter_0
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
-RecentlyPlaced=/Game/FirstPersonBP/Blueprints/SmallObject_BP.SmallObject_BP;
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
-Object=
-StaticMeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
-MeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
-PrimitiveComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
-SceneComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
-ActorComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
+Object="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+StaticMeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+MeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+PrimitiveComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+SceneComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+ActorComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 SphereComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 InputSettings="\"Object.Bindings.AxisConfig\" \"Object.Bindings.ActionMappings.ActionMappings[10]\" "
@@ -1463,8 +1467,8 @@ ParticleModuleColorBase="\"Object.Color.ColorOverLife.Distribution\" \"Object.Co
 ParticleModuleTypeDataMesh="\"Object.Orientation.RollPitchYawRange.Distribution\" "
 ParticleModuleTypeDataBase="\"Object.Orientation.RollPitchYawRange.Distribution\" "
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-PreviewMaterial="\"Object.Group Sorting.ParameterGroupData.ParameterGroupData[12]\" "
-Material="\"Object.Group Sorting.ParameterGroupData.ParameterGroupData[12]\" "
+PreviewMaterial=
+Material=
 MaterialInterface=
 GeomModifier_Extrude="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
@@ -1562,6 +1566,8 @@ StaticMeshActor=
 /Game/Materials/TetherGlow_Mat_Inst2.TetherGlow_Mat_Inst2=1
 /Game/StarterContent/Props/SM_Rock.SM_Rock=1
 /Game/Materials/TetherGlow_Mat_Inst3.TetherGlow_Mat_Inst3=1
+/Game/Meshes/Crystal_neural_node/Prism_Mesh.Prism_Mesh=1
+/Game/Materials/Mirror1.Mirror1=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="PhysicsAssetEditor",Commands=)
@@ -2393,5 +2399,90 @@ PreserveScaleRatio=True
 [WorldBrowser]
 DisplayPaths=False
 DisplayActorsCount=False
+
+[/Script/UnrealEd.FbxImportUI]
+LodDistance0=0.000000
+LodDistance1=0.000000
+LodDistance2=0.000000
+LodDistance3=0.000000
+LodDistance4=0.000000
+LodDistance5=0.000000
+LodDistance6=0.000000
+LodDistance7=0.000000
+
+[FBX_Import_UI_Option_FbxStaticMeshImportData]
+StaticMeshLODGroup=None
+VertexColorImportOption=Ignore
+VertexOverrideColor=(B=255,G=255,R=255,A=255)
+bGenerateLightmapUVs=True
+bOneConvexHullPerUCX=True
+bAutoGenerateCollision=True
+bCombineMeshes=False
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ImportNormals
+NormalGenerationMethod=MikkTSpace
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxSkeletalMeshImportData]
+bUseT0AsRefPose=False
+bPreserveSmoothingGroups=True
+bImportMeshesInBoneHierarchy=True
+bImportMorphTargets=False
+ThresholdPosition=0.000020
+ThresholdTangentNormal=0.000020
+ThresholdUV=0.000977
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ComputeNormals
+NormalGenerationMethod=MikkTSpace
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxAnimSequenceImportData]
+AnimationLength=FBXALIT_ExportedTime
+bUseDefaultSampleRate=False
+bImportCustomAttribute=True
+bImportBoneTracks=True
+bSetMaterialDriveParameterOnCustomAttribute=False
+MaterialCurveSuffixes=_mat
+bRemoveRedundantKeys=True
+bDeleteExistingMorphTargetCurves=False
+bDoNotImportCurveWithZero=True
+bPreserveLocalTransform=False
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxTextureImportData]
+bInvertNormalMaps=False
+MaterialSearchLocation=Local
+BaseMaterialName=None
+BaseColorName=
+BaseDiffuseTextureName=
+BaseNormalTextureName=
+BaseEmissiveColorName=
+BaseEmmisiveTextureName=
+BaseSpecularTextureName=
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
 
 
