--- a/MM_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MM_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -104,8 +104,8 @@ SnapScaleEnabled=False
 RotGridEnabled=False
 
 [MRU]
-MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem1=/Game/FirstPersonBP/Maps/VerticalSlice_Level_1
+MRUItem0=/Game/FirstPersonBP/Maps/VerticalSlice_Level_1
+MRUItem1=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 MRUItem2=/Game/FirstPersonBP/Maps/VerticalSlice_Level1
 
 [/Script/UnrealEd.PersonaOptions]
@@ -204,7 +204,7 @@ MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Vector P
 CableComponent=CableComponent.Rendering.TextureStreaming,CableComponent.Rendering.LOD,
 MeshComponent=MeshComponent.Rendering.TextureStreaming,MeshComponent.Rendering.LOD,MeshComponent.Collision.Collision,
 StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
-PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Rendering Features.Rendering Features,PostProcessVolume.Lens.Lens
+PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Rendering Features.Rendering Features,
 K2Node_VariableGet=PostProcessVolume.Lens.Lens,
 K2Node_VariableSet=PostProcessVolume.Lens.Lens,
 K2Node_MakeStruct=K2Node_MakeStruct.PinOptions.ShowPinForProperties,
@@ -229,9 +229,10 @@ OrbFocus_BP_C=PostProcessVolume.Lens.Lens,
 KeyJem_BP_C=PostProcessVolume.Lens.Lens,
 ProgressMirror_BP_C=PostProcessVolume.Lens.Lens,
 IntProperty=PostProcessVolume.Lens.Lens,
+ArrayProperty=PostProcessVolume.Lens.Lens,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Meshes
+ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Particles
 AssetPropertyPicker.ThumbnailSizeScale=0.812500
 AssetPropertyPicker.CurrentViewType=0
 SequenceBrowser.ActiveTypeFilters=
@@ -274,7 +275,7 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+LastLevel=/Game/FirstPersonBP/Maps/VerticalSlice_Level_1
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1361,63 +1362,68 @@ FbxImportUI.Transform=True
 FbxImportUI.Miscellaneous=True
 FbxImportUI.LodSettings=True
 FbxImportUI.Material=True
+MaterialExpressionConstant.MaterialExpressionConstant=True
+MaterialExpressionConstant.MaterialExpression=True
+ArrayProperty.Variable=True
+ArrayProperty.DefaultValueCategory=True
+Emitter.Materials=True
 
 [PluginBrowser]
 InstalledPlugins=Substance
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonBP/Blueprints/MirrorPuzzle/KeyJem_BP
-MRUItem1=/Game/FirstPersonBP/Blueprints/MirrorPuzzle/PrismObject_BP
-MRUItem2=/Game/Materials/Mirror1
-MRUItem3=/Game/Materials/Blank_Mat
-MRUItem4=/Game/Meshes/Crystal_neural_node/Prism_Mesh
-MRUItem5=/Game/Meshes/Crystal_neural_node/crystal_neural_node1
-MRUItem6=/Game/Meshes/Crystal_neural_node/crystal_neural_node2
-MRUItem7=/Game/Materials/TetherGlow_Mat_Inst3
-MRUItem8=/Game/StarterContent/Props/SM_Rock
-MRUItem9=/Game/FirstPersonBP/Maps/VerticalSlice_Level_1
-MRUItem10=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem11=/Game/FirstPersonBP/Blueprints/JasonHiscock_BP
-MRUItem12=/Game/Materials/TetherGlow_Mat
-MRUItem13=/Game/Materials/SludgeGlow_Mat1
-MRUItem14=/Game/Materials/TetherGlow_Mat_Inst2
-MRUItem15=/Game/FirstPersonBP/Blueprints/ProgressMirror_BP
-MRUItem16=/Game/FirstPersonBP/Blueprints/LargeObject_BP
-MRUItem17=/Game/FirstPersonBP/Blueprints/MM_UI
-MRUItem18=/Game/Materials/LightBeamMaterial/LightGlow_Mat_Inst2
-MRUItem19=/Game/FirstPersonBP/Blueprints/MirrorShard_BP
+MRUItem0=/Game/FirstPersonBP/Blueprints/ProgressMirror_BP
+MRUItem1=/Game/StarterContent/Props/Materials/M_Rock1_Inst
+MRUItem2=/Game/StarterContent/Props/Materials/M_Rock1
+MRUItem3=/Game/FirstPersonBP/Blueprints/MirrorPuzzle/LightBeam_BP
+MRUItem4=/Game/FirstPersonBP/Maps/VerticalSlice_Level_1
+MRUItem5=/Game/FirstPersonBP/Blueprints/MirrorPuzzle/KeyJem_BP
+MRUItem6=/Game/FirstPersonBP/Blueprints/MirrorPuzzle/PrismObject_BP
+MRUItem7=/Game/Materials/Mirror1
+MRUItem8=/Game/Materials/Blank_Mat
+MRUItem9=/Game/Meshes/Crystal_neural_node/Prism_Mesh
+MRUItem10=/Game/Meshes/Crystal_neural_node/crystal_neural_node1
+MRUItem11=/Game/Meshes/Crystal_neural_node/crystal_neural_node2
+MRUItem12=/Game/Materials/TetherGlow_Mat_Inst3
+MRUItem13=/Game/StarterContent/Props/SM_Rock
+MRUItem14=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem15=/Game/FirstPersonBP/Blueprints/JasonHiscock_BP
+MRUItem16=/Game/Materials/TetherGlow_Mat
+MRUItem17=/Game/Materials/SludgeGlow_Mat1
+MRUItem18=/Game/Materials/TetherGlow_Mat_Inst2
+MRUItem19=/Game/FirstPersonBP/Blueprints/LargeObject_BP
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+RecentlyPlaced=/Game/StarterContent/Particles/P_Steam_Lit.P_Steam_Lit;
+RecentlyPlaced=/Game/StarterContent/Props/Materials/M_Rock1_Inst.M_Rock1_Inst;
+RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/FirstPersonBP/Blueprints/ProgressMirror_BP.ProgressMirror_BP;
+RecentlyPlaced=/Game/StarterContent/Props/Materials/M_Rock1.M_Rock1;
+RecentlyPlaced=/Game/Materials/LightBeamMaterial/LightGlow_Mat_Inst2.LightGlow_Mat_Inst2;
+RecentlyPlaced=/Engine/BasicShapes/Cone.Cone;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Materials/Mirror1.Mirror1;
 RecentlyPlaced=/Game/Materials/Mirror.Mirror;
 RecentlyPlaced=/Game/Meshes/Crystal_neural_node/crystal_neural_node1.crystal_neural_node1;
 RecentlyPlaced=/Game/Meshes/Crystal_neural_node/crystal_neural_node2.crystal_neural_node2;
 RecentlyPlaced=/Game/Materials/TetherGlow_Mat_Inst3.TetherGlow_Mat_Inst3;
-RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/FirstPersonBP/Blueprints/CorruptAreas/Sludge_BP.Sludge_BP;
-RecentlyPlaced=/Engine/BasicShapes/Cone.Cone;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/FirstPersonBP/Blueprints/MirrorPuzzle/MirrorObject_BP.MirrorObject_BP;
 RecentlyPlaced=/Game/Materials/TetherGlow_Mat_Inst2.TetherGlow_Mat_Inst2;
 RecentlyPlaced=/Game/Materials/TetherGlow_Mat_Inst1.TetherGlow_Mat_Inst1;
 RecentlyPlaced=/Game/Materials/TetherGlow_Mat_Inst.TetherGlow_Mat_Inst;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/StarterContent/Props/SM_Rock.SM_Rock;
-RecentlyPlaced=/Game/StarterContent/Props/SM_Bush.SM_Bush;
-RecentlyPlaced=/Game/FirstPersonBP/Blueprints/MirrorPuzzle/KeyJem_BP.KeyJem_BP;
-RecentlyPlaced=/Game/FirstPersonBP/Blueprints/MirrorPuzzle/LightBeam_BP.LightBeam_BP;
-RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/FirstPersonBP/Blueprints/MirrorShard_BP.MirrorShard_BP;
-RecentlyPlaced=/Game/FirstPersonBP/Blueprints/ProgressMirror_BP.ProgressMirror_BP;/Engine/Transient.ActorFactoryBlueprint_0
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
-Object="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-StaticMeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-MeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-PrimitiveComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-SceneComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-ActorComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+Object=
+StaticMeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
+MeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
 SphereComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 InputSettings="\"Object.Bindings.AxisConfig\" \"Object.Bindings.ActionMappings.ActionMappings[10]\" "
@@ -1474,6 +1480,8 @@ GeomModifier_Extrude="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
 StaticMeshActor=
+ProgressMirror_BP_C="\"Object.Default.JemReferences\" "
+LargeObject_BP_C="\"Object.Default.JemReferences\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPerson/Character/Mesh/SK_Mannequin_Arms_PhysicsAsset.SK_Mannequin_Arms_PhysicsAsset=1
@@ -1568,6 +1576,8 @@ StaticMeshActor=
 /Game/Materials/TetherGlow_Mat_Inst3.TetherGlow_Mat_Inst3=1
 /Game/Meshes/Crystal_neural_node/Prism_Mesh.Prism_Mesh=1
 /Game/Materials/Mirror1.Mirror1=1
+/Game/StarterContent/Props/Materials/M_Rock1.M_Rock1=1
+/Game/StarterContent/Props/Materials/M_Rock1_Inst.M_Rock1_Inst=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="PhysicsAssetEditor",Commands=)
