--- a/MM_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MM_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -79,7 +79,6 @@ LastExecutedLaunchName=THAI-PC
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-LastExecutedPlayModeLocation=PlayLocation_CurrentCameraLocation
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 GridEnabled=False
@@ -101,7 +100,6 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport1",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettings=(ViewportType=LVT_OrthoXZ,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1",BufferVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowFPS=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1",BufferVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowFPS=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 SnapScaleEnabled=False
-RotGridEnabled=False
 
 [MRU]
 MRUItem0=/Game/FirstPersonBP/Maps/VerticalSlice_Level_1
@@ -232,7 +230,7 @@ IntProperty=PostProcessVolume.Lens.Lens,
 ArrayProperty=PostProcessVolume.Lens.Lens,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Particles
+ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Props
 AssetPropertyPicker.ThumbnailSizeScale=0.812500
 AssetPropertyPicker.CurrentViewType=0
 SequenceBrowser.ActiveTypeFilters=
@@ -1269,7 +1267,7 @@ K2Node_CustomEvent.Graph=True
 K2Node_CustomEvent.Inputs=True
 K2Node_CallParentFunction.Graph=True
 Sludge_BP_C.TransformCommon=True
-Sludge_BP_C.Rendering=True
+Sludge_BP_C.Rendering=False
 Sludge_BP_C.Input=True
 Sludge_BP_C.Actor=True
 Sludge_BP_C.Tick=True
@@ -1372,28 +1370,31 @@ Emitter.Materials=True
 InstalledPlugins=Substance
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonBP/Blueprints/ProgressMirror_BP
-MRUItem1=/Game/StarterContent/Props/Materials/M_Rock1_Inst
-MRUItem2=/Game/StarterContent/Props/Materials/M_Rock1
-MRUItem3=/Game/FirstPersonBP/Blueprints/MirrorPuzzle/LightBeam_BP
+MRUItem0=/Game/FirstPersonBP/Blueprints/JasonHiscock_BP
+MRUItem1=/Game/FirstPersonBP/Blueprints/ProgressMirror_BP
+MRUItem2=/Game/Materials/CorruptedArea/SludgeCorruptedArea_Particle1
+MRUItem3=/Game/FirstPersonBP/Blueprints/CorruptAreas/Sludge_BP
 MRUItem4=/Game/FirstPersonBP/Maps/VerticalSlice_Level_1
-MRUItem5=/Game/FirstPersonBP/Blueprints/MirrorPuzzle/KeyJem_BP
-MRUItem6=/Game/FirstPersonBP/Blueprints/MirrorPuzzle/PrismObject_BP
-MRUItem7=/Game/Materials/Mirror1
-MRUItem8=/Game/Materials/Blank_Mat
-MRUItem9=/Game/Meshes/Crystal_neural_node/Prism_Mesh
-MRUItem10=/Game/Meshes/Crystal_neural_node/crystal_neural_node1
-MRUItem11=/Game/Meshes/Crystal_neural_node/crystal_neural_node2
-MRUItem12=/Game/Materials/TetherGlow_Mat_Inst3
-MRUItem13=/Game/StarterContent/Props/SM_Rock
-MRUItem14=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem15=/Game/FirstPersonBP/Blueprints/JasonHiscock_BP
-MRUItem16=/Game/Materials/TetherGlow_Mat
-MRUItem17=/Game/Materials/SludgeGlow_Mat1
-MRUItem18=/Game/Materials/TetherGlow_Mat_Inst2
-MRUItem19=/Game/FirstPersonBP/Blueprints/LargeObject_BP
+MRUItem5=/Game/StarterContent/Props/Materials/M_Rock1_Inst
+MRUItem6=/Game/StarterContent/Props/Materials/M_Rock1
+MRUItem7=/Game/FirstPersonBP/Blueprints/MirrorPuzzle/LightBeam_BP
+MRUItem8=/Game/FirstPersonBP/Blueprints/MirrorPuzzle/KeyJem_BP
+MRUItem9=/Game/FirstPersonBP/Blueprints/MirrorPuzzle/PrismObject_BP
+MRUItem10=/Game/Materials/Mirror1
+MRUItem11=/Game/Materials/Blank_Mat
+MRUItem12=/Game/Meshes/Crystal_neural_node/Prism_Mesh
+MRUItem13=/Game/Meshes/Crystal_neural_node/crystal_neural_node1
+MRUItem14=/Game/Meshes/Crystal_neural_node/crystal_neural_node2
+MRUItem15=/Game/Materials/TetherGlow_Mat_Inst3
+MRUItem16=/Game/StarterContent/Props/SM_Rock
+MRUItem17=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem18=/Game/Materials/TetherGlow_Mat
+MRUItem19=/Game/Materials/SludgeGlow_Mat1
 
 [PlacementMode]
+RecentlyPlaced=/Game/FirstPersonBP/Blueprints/LargeObject_BP.LargeObject_BP;
+RecentlyPlaced=/Game/Materials/CorruptedArea/SludgeCorruptedArea_Particle1.SludgeCorruptedArea_Particle1;
+RecentlyPlaced=/Game/Materials/CorruptedArea/SludgeCorruptedArea_Particle.SludgeCorruptedArea_Particle;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/StarterContent/Particles/P_Steam_Lit.P_Steam_Lit;
 RecentlyPlaced=/Game/StarterContent/Props/Materials/M_Rock1_Inst.M_Rock1_Inst;
@@ -1411,19 +1412,16 @@ RecentlyPlaced=/Game/FirstPersonBP/Blueprints/CorruptAreas/Sludge_BP.Sludge_BP;
 RecentlyPlaced=/Game/FirstPersonBP/Blueprints/MirrorPuzzle/MirrorObject_BP.MirrorObject_BP;
 RecentlyPlaced=/Game/Materials/TetherGlow_Mat_Inst2.TetherGlow_Mat_Inst2;
 RecentlyPlaced=/Game/Materials/TetherGlow_Mat_Inst1.TetherGlow_Mat_Inst1;
-RecentlyPlaced=/Game/Materials/TetherGlow_Mat_Inst.TetherGlow_Mat_Inst;
-RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/StarterContent/Props/SM_Rock.SM_Rock;
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
-Object=
+Object="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
 StaticMeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
-PrimitiveComponent=
-SceneComponent=
-ActorComponent=
+PrimitiveComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
+SceneComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
+ActorComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
 SphereComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 InputSettings="\"Object.Bindings.AxisConfig\" \"Object.Bindings.ActionMappings.ActionMappings[10]\" "
@@ -1439,7 +1437,7 @@ CableComponent="\"Object.Cable.AttachEndTo\" \"Object.Rendering.OverrideMaterial
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ParticleModuleLocation="\"Object.Location.StartLocation\" \"Object.Location.StartLocation.Distribution\" "
 ParticleModuleLocationBase="\"Object.Location.StartLocation\" \"Object.Location.StartLocation.Distribution\" "
-ParticleModule="\"Object.Velocity.StartVelocity\" \"Object.Velocity.StartVelocity.Distribution\" \"Object.Velocity.StartVelocityRadial.Distribution\" "
+ParticleModule="\"Object.Location.StartLocation\" \"Object.Location.StartLocation.Distribution\" "
 ParticleModuleSize="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" "
 ParticleModuleSizeBase="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" "
 ParticleModuleLifetime="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribution\" "
@@ -1481,7 +1479,7 @@ GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
 StaticMeshActor=
 ProgressMirror_BP_C="\"Object.Default.JemReferences\" "
-LargeObject_BP_C="\"Object.Default.JemReferences\" "
+LargeObject_BP_C=
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPerson/Character/Mesh/SK_Mannequin_Arms_PhysicsAsset.SK_Mannequin_Arms_PhysicsAsset=1
@@ -1578,6 +1576,7 @@ LargeObject_BP_C="\"Object.Default.JemReferences\" "
 /Game/Materials/Mirror1.Mirror1=1
 /Game/StarterContent/Props/Materials/M_Rock1.M_Rock1=1
 /Game/StarterContent/Props/Materials/M_Rock1_Inst.M_Rock1_Inst=1
+/Game/Materials/CorruptedArea/SludgeCorruptedArea_Particle1.SludgeCorruptedArea_Particle1=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="PhysicsAssetEditor",Commands=)
