--- a/MM_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MM_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -103,8 +103,8 @@ SnapScaleEnabled=False
 
 [MRU]
 MRUItem0=/Game/FirstPersonBP/Maps/SandWorld
-MRUItem1=/Game/FirstPersonBP/Maps/VerticalSlice_Level_1
-MRUItem2=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem1=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem2=/Game/FirstPersonBP/Maps/VerticalSlice_Level_1
 MRUItem3=/Game/FirstPersonBP/Maps/VerticalSlice_Level1
 
 [/Script/UnrealEd.PersonaOptions]
@@ -278,7 +278,7 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/FirstPersonBP/Maps/SandWorld
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1409,26 +1409,26 @@ LandscapeGizmoActiveActor.Actor=True
 InstalledPlugins=Substance
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonBP/Blueprints/SandFX/Sand_Material_Inst
-MRUItem1=/Game/FirstPersonBP/Blueprints/SandFX/Sand_Material
-MRUItem2=/Game/FirstPersonBP/Maps/SandWorld
-MRUItem3=/Game/FirstPersonBP/Blueprints/JasonHiscock_BP
-MRUItem4=/Game/FirstPersonBP/Blueprints/ProgressMirror_BP
-MRUItem5=/Game/Materials/CorruptedArea/SludgeCorruptedArea_Particle1
-MRUItem6=/Game/FirstPersonBP/Blueprints/CorruptAreas/Sludge_BP
-MRUItem7=/Game/FirstPersonBP/Maps/VerticalSlice_Level_1
-MRUItem8=/Game/StarterContent/Props/Materials/M_Rock1_Inst
-MRUItem9=/Game/StarterContent/Props/Materials/M_Rock1
-MRUItem10=/Game/FirstPersonBP/Blueprints/MirrorPuzzle/LightBeam_BP
-MRUItem11=/Game/FirstPersonBP/Blueprints/MirrorPuzzle/KeyJem_BP
-MRUItem12=/Game/FirstPersonBP/Blueprints/MirrorPuzzle/PrismObject_BP
-MRUItem13=/Game/Materials/Mirror1
-MRUItem14=/Game/Materials/Blank_Mat
-MRUItem15=/Game/Meshes/Crystal_neural_node/Prism_Mesh
-MRUItem16=/Game/Meshes/Crystal_neural_node/crystal_neural_node1
-MRUItem17=/Game/Meshes/Crystal_neural_node/crystal_neural_node2
-MRUItem18=/Game/Materials/TetherGlow_Mat_Inst3
-MRUItem19=/Game/StarterContent/Props/SM_Rock
+MRUItem0=/Game/FirstPersonBP/Maps/SandWorld
+MRUItem1=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem2=/Game/FirstPersonBP/Maps/VerticalSlice_Level_1
+MRUItem3=/Game/FirstPersonBP/Blueprints/SandFX/Sand_Material_Inst
+MRUItem4=/Game/FirstPersonBP/Blueprints/SandFX/Sand_Material
+MRUItem5=/Game/FirstPersonBP/Blueprints/JasonHiscock_BP
+MRUItem6=/Game/FirstPersonBP/Blueprints/ProgressMirror_BP
+MRUItem7=/Game/Materials/CorruptedArea/SludgeCorruptedArea_Particle1
+MRUItem8=/Game/FirstPersonBP/Blueprints/CorruptAreas/Sludge_BP
+MRUItem9=/Game/StarterContent/Props/Materials/M_Rock1_Inst
+MRUItem10=/Game/StarterContent/Props/Materials/M_Rock1
+MRUItem11=/Game/FirstPersonBP/Blueprints/MirrorPuzzle/LightBeam_BP
+MRUItem12=/Game/FirstPersonBP/Blueprints/MirrorPuzzle/KeyJem_BP
+MRUItem13=/Game/FirstPersonBP/Blueprints/MirrorPuzzle/PrismObject_BP
+MRUItem14=/Game/Materials/Mirror1
+MRUItem15=/Game/Materials/Blank_Mat
+MRUItem16=/Game/Meshes/Crystal_neural_node/Prism_Mesh
+MRUItem17=/Game/Meshes/Crystal_neural_node/crystal_neural_node1
+MRUItem18=/Game/Meshes/Crystal_neural_node/crystal_neural_node2
+MRUItem19=/Game/Materials/TetherGlow_Mat_Inst3
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.PostProcessVolume;/Engine/Transient.ActorFactoryBoxVolume_17
