--- a/MM_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MM_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -275,7 +275,7 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/FirstPersonBP/Maps/SandWorld
+LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -1404,33 +1404,39 @@ LandscapeGizmoActiveActor.Gizmo=True
 LandscapeGizmoActiveActor.Rendering=True
 LandscapeGizmoActiveActor.Input=True
 LandscapeGizmoActiveActor.Actor=True
+StaticMeshActor.HLOD=False
+StaticMeshActor.AssetUserData=False
 
 [PluginBrowser]
 InstalledPlugins=Substance
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonBP/Maps/SandWorld
-MRUItem1=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem2=/Game/FirstPersonBP/Maps/VerticalSlice_Level_1
-MRUItem3=/Game/FirstPersonBP/Blueprints/SandFX/Sand_Material_Inst
-MRUItem4=/Game/FirstPersonBP/Blueprints/SandFX/Sand_Material
-MRUItem5=/Game/FirstPersonBP/Blueprints/JasonHiscock_BP
-MRUItem6=/Game/FirstPersonBP/Blueprints/ProgressMirror_BP
-MRUItem7=/Game/Materials/CorruptedArea/SludgeCorruptedArea_Particle1
-MRUItem8=/Game/FirstPersonBP/Blueprints/CorruptAreas/Sludge_BP
-MRUItem9=/Game/StarterContent/Props/Materials/M_Rock1_Inst
-MRUItem10=/Game/StarterContent/Props/Materials/M_Rock1
-MRUItem11=/Game/FirstPersonBP/Blueprints/MirrorPuzzle/LightBeam_BP
-MRUItem12=/Game/FirstPersonBP/Blueprints/MirrorPuzzle/KeyJem_BP
-MRUItem13=/Game/FirstPersonBP/Blueprints/MirrorPuzzle/PrismObject_BP
-MRUItem14=/Game/Materials/Mirror1
-MRUItem15=/Game/Materials/Blank_Mat
-MRUItem16=/Game/Meshes/Crystal_neural_node/Prism_Mesh
-MRUItem17=/Game/Meshes/Crystal_neural_node/crystal_neural_node1
-MRUItem18=/Game/Meshes/Crystal_neural_node/crystal_neural_node2
-MRUItem19=/Game/Materials/TetherGlow_Mat_Inst3
+MRUItem0=/Game/Meshes/Columns/SM_ColumnNuhasBase_ColumnNuhasBase
+MRUItem1=/Game/FirstPersonBP/Maps/SandWorld
+MRUItem2=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem3=/Game/FirstPersonBP/Maps/VerticalSlice_Level_1
+MRUItem4=/Game/FirstPersonBP/Blueprints/SandFX/Sand_Material_Inst
+MRUItem5=/Game/FirstPersonBP/Blueprints/SandFX/Sand_Material
+MRUItem6=/Game/FirstPersonBP/Blueprints/JasonHiscock_BP
+MRUItem7=/Game/FirstPersonBP/Blueprints/ProgressMirror_BP
+MRUItem8=/Game/Materials/CorruptedArea/SludgeCorruptedArea_Particle1
+MRUItem9=/Game/FirstPersonBP/Blueprints/CorruptAreas/Sludge_BP
+MRUItem10=/Game/StarterContent/Props/Materials/M_Rock1_Inst
+MRUItem11=/Game/StarterContent/Props/Materials/M_Rock1
+MRUItem12=/Game/FirstPersonBP/Blueprints/MirrorPuzzle/LightBeam_BP
+MRUItem13=/Game/FirstPersonBP/Blueprints/MirrorPuzzle/KeyJem_BP
+MRUItem14=/Game/FirstPersonBP/Blueprints/MirrorPuzzle/PrismObject_BP
+MRUItem15=/Game/Materials/Mirror1
+MRUItem16=/Game/Materials/Blank_Mat
+MRUItem17=/Game/Meshes/Crystal_neural_node/Prism_Mesh
+MRUItem18=/Game/Meshes/Crystal_neural_node/crystal_neural_node1
+MRUItem19=/Game/Meshes/Crystal_neural_node/crystal_neural_node2
 
 [PlacementMode]
+RecentlyPlaced=/Game/Meshes/Columns/SM_ColumnQumranTop_ColumnQumranTop.SM_ColumnQumranTop_ColumnQumranTop;
+RecentlyPlaced=/Game/Meshes/Columns/SM_ColumnTigerSegment_ColumnTigerSegment.SM_ColumnTigerSegment_ColumnTigerSegment;
+RecentlyPlaced=/Game/Meshes/Columns/SM_ColumnSpiralSegment_ColumnSpiralSegment.SM_ColumnSpiralSegment_ColumnSpiralSegment;
+RecentlyPlaced=/Game/Meshes/Columns/SM_ColumnNuhasBase_ColumnNuhasBase.SM_ColumnNuhasBase_ColumnNuhasBase;
 RecentlyPlaced=/Game/Meshes/Columns/SM_ColumnSpiralBase_ColumnSpiralBase.SM_ColumnSpiralBase_ColumnSpiralBase;
 RecentlyPlaced=/Game/Meshes/Columns/SM_ColumnSmoothSegment_ColumnSmoothSegment.SM_ColumnSmoothSegment_ColumnSmoothSegment;
 RecentlyPlaced=/Script/Engine.PostProcessVolume;/Engine/Transient.ActorFactoryBoxVolume_17
@@ -1447,15 +1453,11 @@ RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLigh
 RecentlyPlaced=/Game/StarterContent/Particles/P_Steam_Lit.P_Steam_Lit;
 RecentlyPlaced=/Game/StarterContent/Props/Materials/M_Rock1_Inst.M_Rock1_Inst;
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/FirstPersonBP/Blueprints/ProgressMirror_BP.ProgressMirror_BP;
-RecentlyPlaced=/Game/StarterContent/Props/Materials/M_Rock1.M_Rock1;
-RecentlyPlaced=/Game/Materials/LightBeamMaterial/LightGlow_Mat_Inst2.LightGlow_Mat_Inst2;
-RecentlyPlaced=/Engine/BasicShapes/Cone.Cone;/Engine/Transient.ActorFactoryBasicShape_0
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
-Object=
+Object="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
 StaticMeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
@@ -1618,6 +1620,7 @@ LargeObject_BP_C=
 /Game/Materials/CorruptedArea/SludgeCorruptedArea_Particle1.SludgeCorruptedArea_Particle1=1
 /Game/FirstPersonBP/Blueprints/SandFX/Sand_Material_Inst.Sand_Material_Inst=1
 /Game/FirstPersonBP/Blueprints/SandFX/Sand_Material.Sand_Material=1
+/Game/Meshes/Columns/SM_ColumnNuhasBase_ColumnNuhasBase.SM_ColumnNuhasBase_ColumnNuhasBase=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="PhysicsAssetEditor",Commands=)
@@ -2404,6 +2407,8 @@ StaticMeshComponent.Physics=True
 Brush.BrushSettings=True
 BlockingVolume.Cooking=False
 Brush.Geometry=True
+StaticMesh.LODCustomMode=True
+StaticMeshActor.StaticMesh=False
 
 [MessageLog]
 LastLogListing=LightingResults
