Added reference images for bones and concept art for the door.

--- a/MM_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MM_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -123,7 +123,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/MourningMirrorsVS/Placeables
+ContentBrowserTab1.SelectedPaths=/Game/MourningMirrorsVS/Core/Interactables
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000
@@ -1668,6 +1668,13 @@ BP_Concealment_Passive_Child_C.Actor=True
 BP_Concealment_Active_C.Default=True
 BP_Concealment_Active_Child_C.TransformCommon=True
 BP_Concealment_Tomb_Full_C.TransformCommon=True
+BP_Concealment_Tomb_Partial_C.Tick=True
+BP_Concealment_Tomb_Partial_C.Default=True
+BP_Concealment_Tomb_Partial_C.Rendering=True
+BP_Concealment_Tomb_Partial_C.Replication=True
+BP_Concealment_Tomb_Partial_C.Collision=True
+BP_Concealment_Tomb_Partial_C.Input=True
+BP_Concealment_Tomb_Partial_C.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonBP/Maps/FirstPersonExampleMap.FirstPersonExampleMap:PersistentLevel.FirstPersonExampleMap=1
@@ -1738,6 +1745,7 @@ BP_Concealment_Tomb_Full_C.TransformCommon=True
 /Game/MourningMirrorsVS/Core/Interactables/BP_Concealment_Active_Child.BP_Concealment_Active_Child=1
 /Game/MourningMirrorsVS/Core/Interactables/BP_Concealment_Passive_Child.BP_Concealment_Passive_Child=1
 /Game/MourningMirrorsVS/Placeables/BP_Concealment_Tomb_Full.BP_Concealment_Tomb_Full=1
+/Game/MourningMirrorsVS/Placeables/BP_Concealment_Tomb_Partial.BP_Concealment_Tomb_Partial=1
 
 [MRU]
 MRUItem0=/Game/MourningMirrorsVS/Maps/VerticalSlice
@@ -1760,26 +1768,26 @@ PostProcessVolume=PostProcessVolume.Lens.Lens,
 StaticMesh=StaticMesh.ImportSettings.Transform,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MourningMirrorsVS/Art/MesoAmerican/S_Tomb_Lid
-MRUItem1=/Game/MourningMirrorsVS/Art/MesoAmerican/S_Tomb
-MRUItem2=/Game/MourningMirrorsVS/Placeables/BP_Concealment_Tomb_Full
-MRUItem3=/Game/MourningMirrorsVS/Core/Interactables/BP_Swing
-MRUItem4=/Game/MourningMirrorsVS/Core/Interactables/BP_Concealment_Active
-MRUItem5=/Game/MourningMirrorsVS/Core/Interactables/BP_Concealment_Passive_Child
-MRUItem6=/Game/MourningMirrorsVS/Core/Interactables/BP_Concealment_Active_Child
-MRUItem7=/Game/MourningMirrorsVS/Art/Nature/S_RockPool
-MRUItem8=/Game/MourningMirrorsVS/Core/Interactables/BP_Movable
-MRUItem9=/Game/MourningMirrorsVS/Core/Interactables/BP_Mirror_Progression
-MRUItem10=/Game/MourningMirrorsVS/Core/Interactables/BP_Concealment_Passive
-MRUItem11=/Game/MourningMirrorsVS/Art/Common/S_Ladder_WoodSmall
-MRUItem12=/Game/MourningMirrorsVS/Art/MesoAmerican/S_Temple
-MRUItem13=/Game/MourningMirrorsVS/Art/MesoAmerican/S_TempleInvertedOLD
-MRUItem14=/Game/MourningMirrorsVS/Art/MesoAmerican/Columns/S_ColumnTigerSegment
-MRUItem15=/Game/MourningMirrorsVS/Art/MesoAmerican/Columns/S_ColumnTigerBase
-MRUItem16=/Game/MourningMirrorsVS/Art/MesoAmerican/Columns/S_ColumnTiger_SegmentOLD
-MRUItem17=/Game/MourningMirrorsVS/Art/MesoAmerican/Columns/S_ColumnTiger_BaseOLD
-MRUItem18=/Game/MourningMirrorsVS/Art/MesoAmerican/Columns/S_ColumnSpiralSegment
-MRUItem19=/Game/MourningMirrorsVS/Art/MesoAmerican/Columns/S_ColumnSpiral_SegmentOLD
+MRUItem0=/Game/MourningMirrorsVS/Core/Interactables/BP_Concealment_Active
+MRUItem1=/Game/MourningMirrorsVS/Placeables/BP_Concealment_Tomb_Partial
+MRUItem2=/Game/MourningMirrorsVS/Art/MesoAmerican/S_Tomb_Lid
+MRUItem3=/Game/MourningMirrorsVS/Art/MesoAmerican/S_Tomb
+MRUItem4=/Game/MourningMirrorsVS/Placeables/BP_Concealment_Tomb_Full
+MRUItem5=/Game/MourningMirrorsVS/Core/Interactables/BP_Swing
+MRUItem6=/Game/MourningMirrorsVS/Core/Interactables/BP_Concealment_Passive_Child
+MRUItem7=/Game/MourningMirrorsVS/Core/Interactables/BP_Concealment_Active_Child
+MRUItem8=/Game/MourningMirrorsVS/Art/Nature/S_RockPool
+MRUItem9=/Game/MourningMirrorsVS/Core/Interactables/BP_Movable
+MRUItem10=/Game/MourningMirrorsVS/Core/Interactables/BP_Mirror_Progression
+MRUItem11=/Game/MourningMirrorsVS/Core/Interactables/BP_Concealment_Passive
+MRUItem12=/Game/MourningMirrorsVS/Art/Common/S_Ladder_WoodSmall
+MRUItem13=/Game/MourningMirrorsVS/Art/MesoAmerican/S_Temple
+MRUItem14=/Game/MourningMirrorsVS/Art/MesoAmerican/S_TempleInvertedOLD
+MRUItem15=/Game/MourningMirrorsVS/Art/MesoAmerican/Columns/S_ColumnTigerSegment
+MRUItem16=/Game/MourningMirrorsVS/Art/MesoAmerican/Columns/S_ColumnTigerBase
+MRUItem17=/Game/MourningMirrorsVS/Art/MesoAmerican/Columns/S_ColumnTiger_SegmentOLD
+MRUItem18=/Game/MourningMirrorsVS/Art/MesoAmerican/Columns/S_ColumnTiger_BaseOLD
+MRUItem19=/Game/MourningMirrorsVS/Art/MesoAmerican/Columns/S_ColumnSpiralSegment
 
 [MessageLog]
 LastLogListing=LightingResults
